# DamageBot

./: .gitignore  Connection.cpp  Connection.h  Delegate.h  LICENSE  PropertiesReader.cpp  PropertiesReader.h  README.md  StringLib.h  main.cpp
action/: SimpleCommands.cpp  SimpleCommands.h
bot/: DamageBot.cpp  DamageBot.h
events/: ChatEvent.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventType.h
nbproject/: Makefile-Debug.mk  Makefile-Debug_Linux.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_Linux.bash  Package-Release.bash  configurations.xml  project.xml
src/: BotConfig.cpp  BotConfig.h  CMakeLists.txt  StringLib.h  main.cpp
src/bot/: DamageBot.cpp  DamageBot.h  IrcBot.cpp  IrcBot.h
src/events/: ChatEvent.h  Delegate.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h  IDelegate.h  RegisteredDelegate.cpp  RegisteredDelegate.h
src/logic/: SimpleCommands.cpp  SimpleCommands.h
src/logic/chatbot/: ChatbotHandler.cpp  ChatbotHandler.h  ResponseNode.h
src/logic/commands/: CommandProcessor.cpp  CommandProcessor.h
src/logic/simplecommands/: SimpleCommands.cpp  SimpleCommands.h
src/networking/: Connection.cpp  Connection.h
src/plugin/: Api.h  Plugin.h
src/tools/: PropertiesFile.cpp  PropertiesFile.h  PropertiesReader.cpp  PropertiesReader.h  StringLib.h
